# graphics-klein-bottle

./: .gitignore  Application.cpp  Application.hpp  BackupMesh.cpp  CMakeLists.txt  Common.h  KleinBottleApplication.cpp  KleinBottleApplication.h  Main.cpp  Mesh.cpp  Mesh.hpp  README.md  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp
296ZvonarevData/: LightsAndTexture.frag  LightsAndTexture.vert  manyLights.frag  shader.vert
imgui/: imgui_impl_glfw_gl3.cpp
